v1.2.4.424
- revised context object lifetime management (lock-less reference counting)
- demo 12 "Long Polling": added example EventSource (text/event-stream)

v1.2.3.408
- WebSocket support (only xxmHttp,xxmSyna,xxmAhttpd,xxmHost)
- SCGI handler: xxmSCGI*
- serve handler's icon for "/favicon.ico" (project registry override)
- fixed file handle leak on serving 304 responses on static files
- fixed issue with XXL's that require DLL's in same folder
- fixed issue with non-latin encoded compiler error messages
- fixed issue with non-latin encoded uploaded file name
- fixed issue with IP-addresses
- xxmAhttpd: Apache 2.4 support (no longer supports 2.2!)

v1.2.2.369
- error page: back link when referer, refresh link only on GET
- LoadCopy by library file signature to avoid multiple copies being loaded, retries on access denied
- default xxmSession on TStringList (sorted!) instead of TObjectList
- parser: in code, treat lines that start with "<" and end with ">" as HTML,
  allow [[#]] section on one line in a code section
- recycle allocated memory buffers, use HeapAlloc instead of GlobalAlloc
- long polling support (IXxmContextSuspend, IXxmProjectEvents2)
- xxmHttp: thread to wait on groups of (slow) connections that have all content in buffer
- xxmHttp: support basic authentication (401, "WWW-Authenticate: Basic")
- xxmIsapi: asynchronous sending on more than 64KiB in buffer (project should set Context.ContentBuffer!)
- xxmLocal: custom handling of WWW-Authenticate,
  when debugging hold 'X' on authenticated page load to clear stored credentials
- xxmConv: /noupdate switch
- revised thread scheduling from thread pool

v1.2.1.337
- xxmHttp: IPv6 support
- xxmHttp: support OPTIONS, HEAD, TRACE
- xxmISAPI: fixed initialization issue
- fixed issue mapping error line numbers on files in a deeper folder
- fixed issue with BufferSize and smaller responses

v1.2.0.325
- revised internal send/buffer logic