@@ -14,7 +14,10 @@ uses xxm;
 
 type
   TXxmdemo=class(TXxmProject)
+  private
+    ResModSince:string;
   public
+    procedure AfterConstruction; override;
     function LoadPage(Context: IXxmContext; Address: WideString): IXxmFragment; override;
     function LoadFragment(Context: IXxmContext; Address, RelativeTo: WideString): IXxmFragment; override;
     procedure UnloadFragment(Fragment: IXxmFragment); override;
@@ -25,6 +28,12 @@ type
     FResName:AnsiString;
   public
     constructor Create(AProject: TXxmProject; AResName: AnsiString);
+    procedure Build(const Context: IXxmContext; const Caller: IXxmFragment;
+      const Values: array of OleVariant; const Objects: array of TObject); override;
+  end;
+
+  TxxmNoChange=class(TxxmPage)
+  public
     procedure Build(const Context: IXxmContext; const Caller: IXxmFragment;
       const Values: array of OleVariant; const Objects: array of TObject); override;
   end;
@@ -64,7 +73,33 @@ begin
   end;
 end;
 
+function RFC822DateGMT(dd: TDateTime): string;
+const
+  Days:array [1..7] of string=
+    ('Sun','Mon','Tue','Wed','Thu','Fri','Sat');
+  Months:array [1..12] of string=
+    ('Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec');
+//  SignStr:array[boolean] of string=('-','+');
+var
+  dg:TDateTime;
+  y,m,d,wd,th,tm,ts,tms:Word;
+  tz:TIME_ZONE_INFORMATION;
+begin
+  GetTimeZoneInformation(tz);
+  dg:=dd+tz.Bias/1440;
+  DecodeDateFully(dg,y,m,d,wd);
+  DecodeTime(dg,th,tm,ts,tms);
+  FmtStr(Result, '%s, %d %s %d %.2d:%.2d:%.2d GMT',
+    [Days[wd],d,Months[m],y,th,tm,ts]);
+end;
+
 { TXxmdemo }
+
+procedure TXxmdemo.AfterConstruction;
+begin
+  inherited;
+  ResModSince:=RFC822DateGMT(Now);
+end;
 
 function TXxmdemo.LoadPage(Context: IXxmContext; Address: WideString): IXxmFragment;
 var
@@ -72,10 +107,20 @@ var
 begin
   inherited;
   //TODO: link session to request
-  if Copy(Address,1,5)='res/' then
+  if Copy(Address,1,4)='res/' then
    begin
-    rn:=xxmFilesFromResIndex.Values[Copy(Address,6,Length(Address)-5)];
-    if rn='' then Result:=nil else Result:=TxxmFileFromRes.Create(Self,rn);
+    rn:=xxmFilesFromResIndex.Values[Copy(Address,5,Length(Address)-4)];
+    if rn='' then
+      Result:=nil
+    else
+      //TODO: LastMod from resource index?
+      if (Context as IxxmHttpHeaders).RequestHeaders['If-Modified-Since']=ResModSince then
+        Result:=TxxmNoChange.Create(Self)
+      else
+       begin
+        (Context as IxxmHttpHeaders).ResponseHeaders['Last-Modified']:=ResModSince;
+        Result:=TxxmFileFromRes.Create(Self,rn);
+       end;
    end
   else
     Result:=XxmFragmentRegistry.GetFragment(Self,Address,'');
@@ -112,12 +157,21 @@ begin
   //TODO: TDecompressionStream
   try
     //TODO: Context.ContentType:= (from resources index?)
-    //TODO: ['Last-Modified']:=RFC822DateGMT()
     (Context as IxxmHttpHeaders).ResponseHeaders.Item['Content-Length']:=IntToStr(r.Size);
     Context.SendStream(TStreamAdapter.Create(r));
   finally
     r.Free;
   end;
+end;
+
+{ TxxmNoChange }
+
+procedure TxxmNoChange.Build(const Context: IXxmContext;
+  const Caller: IXxmFragment; const Values: array of OleVariant;
+  const Objects: array of TObject);
+begin
+  Context.SetStatus(304,'Not Modified');
+  //no content
 end;
 
 initialization
