@@ -1,5 +1,6 @@
 v1.2.4.424
 - revised context object lifetime management (lock-less reference counting)
+- demo 7 "Resources": added "If-Modified-Since"
 - demo 12 "Long Polling": added example EventSource (text/event-stream)
 
 v1.2.3.408
